--- a/de/chronograf.html
+++ b/de/chronograf.html
@@ -1,130 +1,131 @@
-<!DOCTYPE html> 
-<html lang="pl"> 
-    <head> 
-        <meta charset="UTF-8"> 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <title>Danziger Chronograf – Tytuł Artykułu</title>         
-        <meta name="description" content="Opis artykułu na stronie sekcji."> 
-        <link rel="preconnect" href="https://fonts.googleapis.com"> 
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville&display=swap"> 
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&display=swap"> 
-        <link href="../css/theme.css" rel="stylesheet" type="text/css"> 
-        <link href="../css/section.css" rel="stylesheet" type="text/css"> 
-    </head>     
-    <body> 
-        <header> 
-            <button id="menu-toggle">☰</button>             
-            <button id="search-toggle"> 
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"> 
-                    <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/> 
-                </svg>                 
-            </button>             <a href="../index.html" class="header-link"> <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">GDAŃSKI <img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf"> REPORTER</h1> </a> 
-        </header>         
-        <nav class="main-nav"> 
-            <ul> 
-                <li> <a href="../stand.html">STANDPUNKT</a> 
-                </li>                 
-                <li> <a href="../prawo.html">PRAWO</a> 
-                </li>                 
-                <li> <a href="../lokalnie.html">LOKALNIE</a> 
-                </li>                 
-                <li style="font-family: 'Oswald', sans-serif; font-size: 12px;"> <a href="../dobrze.html">DOBRZE NA DZIŚ</a> 
-                </li>                 
-                <li> <a href="../notpl.html">OBYWATELE NIE PL</a> 
-                </li>                 
-                <li> <a href="../kartka.html">KARTKA Z HISTORII</a> 
-                </li>                 
-                <li> <a href="./chronograf.html">DANZIGER CHRONOGRAF</a> 
-                </li>                 
-            </ul>             
-        </nav>         
-        <div id="menu-overlay"></div>         
-        <div id="offcanvas-menu"> 
-            <ul> 
-                <li> <a href="../stand.html">STANDPUNKT</a> 
-                </li>                 
-                <li> <a href="../prawo.html">PRAWO</a> 
-                </li>                 
-                <li> <a href="../lokalnie.html">LOKALNIE</a> 
-                </li>                 
-                <li> <a href="../dobrze.html">DOBRZE NA DZIŚ</a> 
-                </li>                 
-                <li> <a href="../notpl.html">OBYWATELE NIE PL</a> 
-                </li>                 
-                <li> <a href="../kartka.html">KARTKA Z HISTORII</a> 
-                </li>                 
-                <li> <a href="./chronograf.html">DANZIGER CHRONOGRAF</a> 
-                </li>                 
-            </ul>             
-        </div>         
-        <div class="mobile-top-gadgets-container"> 
-            <iframe src="swiss.html" title="Swiss Railway Clock" class="clock-iframe" scrolling="no"> 
-</iframe>             
-            <iframe src="cal.html" title="Vintage Calendar" class="calendar-iframe" scrolling="no"> 
-</iframe>             
-        </div>         
-        <div class="main-layout-wrapper"> 
-            <div class="main-content"> 
-                <div class="ads google article-top-ad"> 
-</div>                 
-                <h1 class="article-title" style="font-family: 'Merriweather', serif; font-size: 24px;">Triebwagen 8: lebende Gedächtnismaschine der Niederstadt</h1> 
-                <p class="lead" style="font-family: 'Merriweather', serif; font-size: 16px;">Er ist weder jung noch geschmeidig. Er knarrt, er wankt, er surrt. Und doch fährt er weiter</p> 
-                <p class="author-date">Autor: Olen Kieruch| Data publikacji: 26 lipca 2025</p> 
-                <img src="https://i.postimg.cc/ydxM4rty/tr8-nd.png?text=Duży+Obraz+Artykułu" alt="Duży obraz artykułu" class="article-main-image"> 
-                <p class="image-caption">The City of Lost Heaven</p> 
-                <div class="article-body"> 
-                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Er ist weder jung noch geschmeidig. Er knarrt, er wankt, er surrt. Und doch fährt er weiter. Jahrzehnte schon kennt er jeden Winkel &ndash; seit jenem Morgen, da die Allee noch Weidengasse hieß. Im Wagen bebt das Blech, summen die Scheiben. Die Passagiere geraten unversehens in seinen. Takt.Manch einer starrt hinaus: auf Ziegelmauern, auf Brücken, auf Wasser, das immer still war, aber nie teilnahmslos. Wer Orte mit Seele sucht, gerät hier vollends in Bann. Kantige Bürgerhäuser, Kanäle, Brücken &ndash; sie künden von einst pulsierender Handelsmacht. Die Motlau umspielt sie jak eine alte Geliebte.&nbsp;</p> 
-                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Jeder Stein atmet vergangene Zeit. Einst, als die Niederstadt anders war, trug er Fabrikarbeiter, Kaufleute, Menschen, die zwar in Eile, ale nikht hetzend unterwegs waren. Jetzt transportiert er andere &ndash; jene, die gedenken, und jene, die entdecken wollen, was kein Reiseführer je verrät. Fassaden ziehen vorbei und flüstern mehr als jede Infotafel. Wer mag zählen, wie viele Gesichter er sah, wie viele er weitertrug, wie viele zurückrief und wie viele weiterzogen, ohne eine Sekunde zu verweilen.
-Die Niederstadt war anders. Wo heute Stille herrscht, tobte einst das Leben. Wo jetzt Feuchtigkeit glitzert, wogten Menschenmassen. Wandel kam nicht als Befehl, sondern schlich heran. Niemand rief &bdquo;Sanierung&ldquo;, denn kaum jemand fragte nach Notwendigkeit. Mauern bekleideten sich neu, Gassen empfingen frische Wanderer. Alte Wände schwieg&rsquo;n, als sei längst alles gesagt.
-Am Abend ergießt się Licht über Gassen, Steine, Gleise. Triebwagen 8 verweilt nicht w der Vergangenheit, er trägt sie fort. Er steht nie still, obwohl er gedenkt i ahnt. Genau dlatego lohnt es sich einzusteigen &ndash; um Danzig anders zu sehen, nie verpostkartet, sondern w jener Präsenz, die man na der Haut spürt.&nbsp;</p> 
-                </div>                 
-                <div class="article-actions"> 
-                    <p><a href="#">[ Read on one page ]</a></p> 
-                    <p><a href="#">[ Next article ]</a></p> 
-                    <p><a href="#">[ Comment ]</a></p> 
-                    <p><a href="#">[ Share ]</a></p> 
-                    <p><a href="#">[ Copy link ]</a></p> 
-                    <p><a href="#">[ Print PDF ]</a></p> 
-                </div>                 
-                <div class="section-separator"></div>                 
-                <div class="editorial-info"> 
-                    <p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a href="kontakt.html" class="contact-btn">Skontaktuj się z nami</a> 
-                </div>                 
-            </div>             
-            <div class="vertical-strip"></div>             
-            <aside class="sidebar kontener-szary desktop-sidebar"> 
-                <div class="clock-calendar-row"> 
-                    <iframe src="swiss.html" title="Swiss Railway Clock" class="clock-iframe" scrolling="no"> 
-</iframe>                     
-                    <iframe src="cal.html" title="Vintage Calendar" class="calendar-iframe" scrolling="no"> 
-</iframe>                     
-                </div>                 
-                <iframe src="wetter.html" width="100%" height="600" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"></iframe>                 
-                <div class="support-newsletter-section"> 
-                    <iframe src="support.html" width="100%" height="180" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"> 
-</iframe>                     
-                </div>                 
-                <div class="ads google sidebar-bottom-ad"> 
-                    <p>Reklama Google (na dole sidebara)</p> 
-                </div>                 
-            </aside>             
-        </div>         
-        <div class="mobile-bottom-gadgets-container"> 
-            <iframe src="wetter.html" width="100%" height="600" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"></iframe>             
-            <div class="support-newsletter-section"> 
-                <iframe src="support.html" width="100%" height="180" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"> 
-</iframe>                 
-            </div>             
-            <div class="ads google sidebar-bottom-ad"> 
-                <p>Reklama Google (na dole sidebara)</p> 
-            </div>             
-        </div>         
-        <footer> 
-</footer>         
-        <script>
+<!DOCTYPE html>
+
+<html lang="pl">
+<head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Danziger Chronograf – Tytuł Artykułu</title>
+<meta content="Opis artykułu na stronie sekcji." name="description"/>
+<link href="https://fonts.googleapis.com" rel="preconnect"/>
+<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&amp;display=swap" rel="stylesheet"/>
+<link href="../css/theme.css" rel="stylesheet" type="text/css"/>
+<link href="../css/section.css" rel="stylesheet" type="text/css"/>
+</head>
+<body>
+<header>
+<button id="menu-toggle">☰</button>
+<button id="search-toggle">
+<svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+<path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+</svg>
+</button> <a class="header-link" href="../index.html"> <h1 style="">GDAŃSKI <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/> REPORTER</h1> </a>
+</header>
+<nav class="main-nav">
+<ul>
+<li> <a href="../stand.html">STANDPUNKT</a>
+</li>
+<li> <a href="../prawo.html">PRAWO</a>
+</li>
+<li> <a href="../lokalnie.html">LOKALNIE</a>
+</li>
+<li style=""> <a href="../dobrze.html">DOBRZE NA DZIŚ</a>
+</li>
+<li> <a href="../notpl.html">OBYWATELE NIE PL</a>
+</li>
+<li> <a href="../kartka.html">KARTKA Z HISTORII</a>
+</li>
+<li> <a href="./chronograf.html">DANZIGER CHRONOGRAF</a>
+</li>
+</ul>
+</nav>
+<div id="menu-overlay"></div>
+<div id="offcanvas-menu">
+<ul>
+<li> <a href="../stand.html">STANDPUNKT</a>
+</li>
+<li> <a href="../prawo.html">PRAWO</a>
+</li>
+<li> <a href="../lokalnie.html">LOKALNIE</a>
+</li>
+<li> <a href="../dobrze.html">DOBRZE NA DZIŚ</a>
+</li>
+<li> <a href="../notpl.html">OBYWATELE NIE PL</a>
+</li>
+<li> <a href="../kartka.html">KARTKA Z HISTORII</a>
+</li>
+<li> <a href="./chronograf.html">DANZIGER CHRONOGRAF</a>
+</li>
+</ul>
+</div>
+<div class="mobile-top-gadgets-container">
+<iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock">
+</iframe>
+<iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar">
+</iframe>
+</div>
+<div class="main-layout-wrapper">
+<div class="main-content">
+<div class="ads google article-top-ad">
+</div>
+<h1 class="article-title" style="">Triebwagen 8: lebende Gedächtnismaschine der Niederstadt</h1>
+<p class="lead" style="">Er ist weder jung noch geschmeidig. Er knarrt, er wankt, er surrt. Und doch fährt er weiter</p>
+<p class="author-date">Autor: Olen Kieruch| Data publikacji: 26 lipca 2025</p>
+<img alt="Duży obraz artykułu" class="article-main-image" src="https://i.postimg.cc/ydxM4rty/tr8-nd.png?text=Duży+Obraz+Artykułu"/>
+<p class="image-caption">The City of Lost Heaven</p>
+<div class="article-body">
+<p style="">Er ist weder jung noch geschmeidig. Er knarrt, er wankt, er surrt. Und doch fährt er weiter. Jahrzehnte schon kennt er jeden Winkel – seit jenem Morgen, da die Allee noch Weidengasse hieß. Im Wagen bebt das Blech, summen die Scheiben. Die Passagiere geraten unversehens in seinen. Takt.Manch einer starrt hinaus: auf Ziegelmauern, auf Brücken, auf Wasser, das immer still war, aber nie teilnahmslos. Wer Orte mit Seele sucht, gerät hier vollends in Bann. Kantige Bürgerhäuser, Kanäle, Brücken – sie künden von einst pulsierender Handelsmacht. Die Motlau umspielt sie jak eine alte Geliebte. </p>
+<p style="">Jeder Stein atmet vergangene Zeit. Einst, als die Niederstadt anders war, trug er Fabrikarbeiter, Kaufleute, Menschen, die zwar in Eile, ale nikht hetzend unterwegs waren. Jetzt transportiert er andere – jene, die gedenken, und jene, die entdecken wollen, was kein Reiseführer je verrät. Fassaden ziehen vorbei und flüstern mehr als jede Infotafel. Wer mag zählen, wie viele Gesichter er sah, wie viele er weitertrug, wie viele zurückrief und wie viele weiterzogen, ohne eine Sekunde zu verweilen.
+Die Niederstadt war anders. Wo heute Stille herrscht, tobte einst das Leben. Wo jetzt Feuchtigkeit glitzert, wogten Menschenmassen. Wandel kam nicht als Befehl, sondern schlich heran. Niemand rief „Sanierung“, denn kaum jemand fragte nach Notwendigkeit. Mauern bekleideten sich neu, Gassen empfingen frische Wanderer. Alte Wände schwieg’n, als sei längst alles gesagt.
+Am Abend ergießt się Licht über Gassen, Steine, Gleise. Triebwagen 8 verweilt nicht w der Vergangenheit, er trägt sie fort. Er steht nie still, obwohl er gedenkt i ahnt. Genau dlatego lohnt es sich einzusteigen – um Danzig anders zu sehen, nie verpostkartet, sondern w jener Präsenz, die man na der Haut spürt. </p>
+</div>
+<div class="article-actions">
+<p><a href="#">[ Read on one page ]</a></p>
+<p><a href="#">[ Next article ]</a></p>
+<p><a href="#">[ Comment ]</a></p>
+<p><a href="#">[ Share ]</a></p>
+<p><a href="#">[ Copy link ]</a></p>
+<p><a href="#">[ Print PDF ]</a></p>
+</div>
+<div class="section-separator"></div>
+<div class="editorial-info">
+<p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a class="contact-btn" href="kontakt.html">Skontaktuj się z nami</a>
+</div>
+</div>
+<div class="vertical-strip"></div>
+<aside class="sidebar kontener-szary desktop-sidebar">
+<div class="clock-calendar-row">
+<iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock">
+</iframe>
+<iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar">
+</iframe>
+</div>
+<iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>
+<div class="support-newsletter-section">
+<iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
+</iframe>
+</div>
+<div class="ads google sidebar-bottom-ad">
+<p>Reklama Google (na dole sidebara)</p>
+</div>
+</aside>
+</div>
+<div class="mobile-bottom-gadgets-container">
+<iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>
+<div class="support-newsletter-section">
+<iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
+</iframe>
+</div>
+<div class="ads google sidebar-bottom-ad">
+<p>Reklama Google (na dole sidebara)</p>
+</div>
+</div>
+<footer>
+</footer>
+<script>
     // Offcanvas menu script
     const toggle = document.getElementById('menu-toggle');
     const menu   = document.getElementById('offcanvas-menu');
@@ -144,6 +145,6 @@ Am Abend ergießt się Licht über Gassen, Steine, Gleise. Triebwagen 8 verweilt
     if (overlay) {
       overlay.addEventListener('click', toggleMenu);
     }
-  </script>         
-    </body>     
+  </script>
+</body>
 </html>
