--- a/lokalnie.html
+++ b/lokalnie.html
@@ -1,149 +1,145 @@
-<!DOCTYPE html> 
-<html lang="pl"> 
-    <head> 
-        <meta charset="UTF-8"> 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <title>Danziger Chronograf – Tytuł Artykułu</title>         
-        <meta name="description" content="Opis artykułu na stronie sekcji."> 
-        <link rel="preconnect" href="https://fonts.googleapis.com"> 
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville&display=swap"> 
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&display=swap"> 
-        <link href="css/theme.css" rel="stylesheet" type="text/css"> 
-        <link href="css/section.css" rel="stylesheet" type="text/css"> 
-    </head>     
-    <body> 
-        <header> 
-            <button id="menu-toggle">☰</button>             
-            <button id="search-toggle"> 
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"> 
-                    <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/> 
-                </svg>                 
-            </button>             <a href="index.html" class="header-link"> <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">GDAŃSKI <img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf"> REPORTER</h1> </a> 
-        </header>         
-        <nav class="main-nav"> 
-            <ul> 
-                <li> <a href="stand.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">STANDPUNKT</a> 
-                </li>                 
-                <li> <a href="prawo.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">PRAWO</a> 
-                </li>                 
-                <li> <a href="lokalnie.html" style="font-size: 12px; font-family: 'Oswald', sans-serif;">LOKALNIE</a> 
-                </li>                 
-                <li> <a href="dobrze.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DOBRZE NA DZIŚ</a> 
-                </li>                 
-                <li> <a href="notpl.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">OBYWATELE NIE PL</a> 
-                </li>                 
-                <li> <a href="kartka.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">KARTKA Z HISTORII</a> 
-                </li>                 
-                <li> <a href="de/chronograf.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DANZIGER CHRONOGRAF</a> 
-                </li>                 
-            </ul>             
-        </nav>         
-        <div id="menu-overlay"></div>         
-        <div id="offcanvas-menu"> 
-            <ul> 
-                <li> <a href="stand.html">STANDPUNKT</a> 
-                </li>                 
-                <li> <a href="prawo.html">PRAWO</a> 
-                </li>                 
-                <li> <a href="lokalnie.html">LOKALNIE</a> 
-                </li>                 
-                <li> <a href="dobrze.html">DOBRZE NA DZIŚ</a> 
-                </li>                 
-                <li> <a href="notpl.html">OBYWATELE NIE PL</a> 
-                </li>                 
-                <li> <a href="kartka.html">KARTKA Z HISTORII</a> 
-                </li>                 
-                <li> <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a> 
-                </li>                 
-            </ul>             
-        </div>         
-        <div class="mobile-top-gadgets-container"> 
-            <iframe src="swiss.html" title="Swiss Railway Clock" class="clock-iframe" scrolling="no"> 
-</iframe>             
-            <iframe src="cal.html" title="Vintage Calendar" class="calendar-iframe" scrolling="no"> 
-</iframe>             
-        </div>         
-        <div class="main-layout-wrapper"> 
-            <div class="main-content"> 
-                <div class="ads google article-top-ad"> 
-</div>                 
-                <h1 class="article-title" style="font-family: 'Merriweather', serif; font-size: 24px;">Festiwal Kina Plenerowego w Sopocie &ndash; morze, ekran i leżaki.</h1> 
-                <p class="lead" style="font-family: 'Merriweather', serif; font-size: 16px;">W letnie wieczory, kiedy molo pustoszeje z dziennych turystów, a fale zaczynają mówić ciszej, Plac Przyjaciół Sopotu zamienia się w coś więcej niż deptak &ndash; w kino pod gołym niebem.</p> 
-                <p class="author-date">Autor: Jan Kowalski | Data publikacji: 26 lipca 2025</p> 
-                <img src="https://i.postimg.cc/fb2PKfyt/kino809535.jpg?text=Duży+Obraz+Artykułu" alt="Duży obraz artykułu" class="article-main-image"> 
-                <p class="image-caption">To jest podpis pod obrazem, krótki i opisowy.</p> 
-                <div class="article-body"> 
-                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Od poniedziałku do soboty, zawsze o zmierzchu, zaczyna się seans w ramach Festiwalu Kina Plenerowego. Początek &ndash; około 21:30, gdy słońce zniknie za Grand Hotelem. Wstęp wolny, nie ma rezerwacji, nie ma biletów &ndash; kto pierwszy, ten siedzi na leżaku. Kto drugi &ndash; siada na kocu.</p> 
-                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Repertuar?
+<!DOCTYPE html>
+
+<html lang="pl">
+<head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Danziger Chronograf – Tytuł Artykułu</title>
+<meta content="Opis artykułu na stronie sekcji." name="description"/>
+<link href="https://fonts.googleapis.com" rel="preconnect"/>
+<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&amp;display=swap" rel="stylesheet"/>
+<link href="css/theme.css" rel="stylesheet" type="text/css"/>
+<link href="css/section.css" rel="stylesheet" type="text/css"/>
+</head>
+<body>
+<header>
+<button id="menu-toggle">☰</button>
+<button id="search-toggle">
+<svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+<path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+</svg>
+</button> <a class="header-link" href="index.html"> <h1 style="">GDAŃSKI <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/> REPORTER</h1> </a>
+</header>
+<nav class="main-nav">
+<ul>
+<li> <a href="stand.html" style="">STANDPUNKT</a>
+</li>
+<li> <a href="prawo.html" style="">PRAWO</a>
+</li>
+<li> <a href="lokalnie.html" style="">LOKALNIE</a>
+</li>
+<li> <a href="dobrze.html" style="">DOBRZE NA DZIŚ</a>
+</li>
+<li> <a href="notpl.html" style="">OBYWATELE NIE PL</a>
+</li>
+<li> <a href="kartka.html" style="">KARTKA Z HISTORII</a>
+</li>
+<li> <a href="de/chronograf.html" style="">DANZIGER CHRONOGRAF</a>
+</li>
+</ul>
+</nav>
+<div id="menu-overlay"></div>
+<div id="offcanvas-menu">
+<ul>
+<li> <a href="stand.html">STANDPUNKT</a>
+</li>
+<li> <a href="prawo.html">PRAWO</a>
+</li>
+<li> <a href="lokalnie.html">LOKALNIE</a>
+</li>
+<li> <a href="dobrze.html">DOBRZE NA DZIŚ</a>
+</li>
+<li> <a href="notpl.html">OBYWATELE NIE PL</a>
+</li>
+<li> <a href="kartka.html">KARTKA Z HISTORII</a>
+</li>
+<li> <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
+</li>
+</ul>
+</div>
+<div class="mobile-top-gadgets-container">
+<iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock">
+</iframe>
+<iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar">
+</iframe>
+</div>
+<div class="main-layout-wrapper">
+<div class="main-content">
+<div class="ads google article-top-ad">
+</div>
+<h1 class="article-title" style="">Festiwal Kina Plenerowego w Sopocie – morze, ekran i leżaki.</h1>
+<p class="lead" style="">W letnie wieczory, kiedy molo pustoszeje z dziennych turystów, a fale zaczynają mówić ciszej, Plac Przyjaciół Sopotu zamienia się w coś więcej niż deptak – w kino pod gołym niebem.</p>
+<p class="author-date">Autor: Jan Kowalski | Data publikacji: 26 lipca 2025</p>
+<img alt="Duży obraz artykułu" class="article-main-image" src="https://i.postimg.cc/fb2PKfyt/kino809535.jpg?text=Duży+Obraz+Artykułu"/>
+<p class="image-caption">To jest podpis pod obrazem, krótki i opisowy.</p>
+<div class="article-body">
+<p style="">Od poniedziałku do soboty, zawsze o zmierzchu, zaczyna się seans w ramach Festiwalu Kina Plenerowego. Początek – około 21:30, gdy słońce zniknie za Grand Hotelem. Wstęp wolny, nie ma rezerwacji, nie ma biletów – kto pierwszy, ten siedzi na leżaku. Kto drugi – siada na kocu.</p>
+<p style="">Repertuar?
 Kino morskie, podróżnicze i klasyka. Dokumenty o rybakach i opowieści o podróżnikach. W tym tygodniu:
-&ndash; poniedziałek: &bdquo;Atlantyk&rdquo; (reż. Jan-Willem van Ewijk)
-&ndash; środa: &bdquo;Głosy z głębin&rdquo; &ndash; film archiwalny o kutrach dalekomorskich
-&ndash; piątek: &bdquo;Kronika Bałtycka&rdquo; &ndash; przegląd filmów o Trójmieście z lat 1950&ndash;1980
-&ndash; sobota: &bdquo;Pod pokładem&rdquo; &ndash; dramat współczesny z portu Gdynia. Organizatorzy rozstawiają ekrany, nagłośnienie i stoiska z lokalnym popcornem &ndash; produkowanym na bazie kaszubskiej kukurydzy, sprzedawanym w szarych torebkach z pieczątką.
- 
-W tle słychać szum morza i czasem &ndash; muzykę z restauracji przy Monciaku. Ale to nie przeszkadza. To klimat.
-To Sopot nocą &ndash; bez szpilek, bez parawanów.
-Tylko film, sól w powietrzu i niebo pełne ekranowego światła.&nbsp;</p>
-                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">INFORMACJE PRAKTYCZNE
-
-&ndash; Start seansu: codziennie o 21:30 (lipiec&ndash;sierpień)
-&ndash; Miejsce: Plac Przyjaciół Sopotu, bezpośrednio przy Monciaku i wejściu na molo
-&ndash; Wstęp: bezpłatny, liczba leżaków ograniczona
-&ndash; Dodatki: popcorn, kompot i precle dostępne w punktach gastronomicznych
-
+– poniedziałek: „Atlantyk” (reż. Jan-Willem van Ewijk)
+– środa: „Głosy z głębin” – film archiwalny o kutrach dalekomorskich
+– piątek: „Kronika Bałtycka” – przegląd filmów o Trójmieście z lat 1950–1980
+– sobota: „Pod pokładem” – dramat współczesny z portu Gdynia. Organizatorzy rozstawiają ekrany, nagłośnienie i stoiska z lokalnym popcornem – produkowanym na bazie kaszubskiej kukurydzy, sprzedawanym w szarych torebkach z pieczątką. 
+W tle słychać szum morza i czasem – muzykę z restauracji przy Monciaku. Ale to nie przeszkadza. To klimat.
+To Sopot nocą – bez szpilek, bez parawanów.
+Tylko film, sól w powietrzu i niebo pełne ekranowego światła. </p>
+<p style="">INFORMACJE PRAKTYCZNE
+– Start seansu: codziennie o 21:30 (lipiec–sierpień)
+– Miejsce: Plac Przyjaciół Sopotu, bezpośrednio przy Monciaku i wejściu na molo
+– Wstęp: bezpłatny, liczba leżaków ograniczona
+– Dodatki: popcorn, kompot i precle dostępne w punktach gastronomicznych
 Letnie kino plenerowe to jeden z najciekawszych sposobów na wieczór w Sopocie bez tłumów. Idealne dla par, rodzin i turystów szukających odpoczynku od głośnych lokali.
-
-Jeśli szukasz innych pomysłów na relaks &ndash; sprawdź także naszą propozycję jednodniowej trasy kaszubskiej w dziale &bdquo;Dobrze na dziś&rdquo;.
-
-Chcesz zostać na dłużej? Sprawdź noclegi w pobliżu Placu Przyjaciół Sopotu &ndash; apartamenty z widokiem na morze dostępne już od 180 zł za noc.</p> 
-                </div>                 
-                <div class="article-actions"> 
-                    <p><a href="#">[ Read on one page ]</a></p> 
-                    <p><a href="#">[ Next article ]</a></p> 
-                    <p><a href="#">[ Comment ]</a></p> 
-                    <p><a href="#">[ Share ]</a></p> 
-                    <p><a href="#">[ Copy link ]</a></p> 
-                    <p><a href="#">[ Print PDF ]</a></p> 
-                </div>                 
-                <div class="section-separator"></div>                 
-                <div class="editorial-info"> 
-                    <p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a href="kontakt.html" class="contact-btn">Skontaktuj się z nami</a> 
-                </div>                 
-            </div>             
-            <div class="vertical-strip"></div>             
-            <aside class="sidebar kontener-szary desktop-sidebar"> 
-                <div class="clock-calendar-row"> 
-                    <iframe src="swiss.html" title="Swiss Railway Clock" class="clock-iframe" scrolling="no"> 
-</iframe>                     
-                    <iframe src="cal.html" title="Vintage Calendar" class="calendar-iframe" scrolling="no"> 
-</iframe>                     
-                </div>                 
-                <iframe src="wetter.html" width="100%" height="600" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"></iframe>                 
-                <div class="support-newsletter-section"> 
-                    <iframe src="support.html" width="100%" height="180" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"> 
-</iframe>                     
-                </div>                 
-                <div class="ads google sidebar-bottom-ad"> 
-                    <p>Reklama Google (na dole sidebara)</p> 
-                </div>                 
-            </aside>             
-        </div>         
-        <div class="mobile-bottom-gadgets-container"> 
-            <iframe src="wetter.html" width="100%" height="600" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"></iframe>             
-            <div class="support-newsletter-section"> 
-                <iframe src="support.html" width="100%" height="180" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"> 
-</iframe>                 
-            </div>             
-            <div class="ads google sidebar-bottom-ad"> 
-                <p>Reklama Google (na dole sidebara)</p> 
-            </div>             
-        </div>         
-        <footer> 
-</footer>         
-        <script>
+Jeśli szukasz innych pomysłów na relaks – sprawdź także naszą propozycję jednodniowej trasy kaszubskiej w dziale „Dobrze na dziś”.
+Chcesz zostać na dłużej? Sprawdź noclegi w pobliżu Placu Przyjaciół Sopotu – apartamenty z widokiem na morze dostępne już od 180 zł za noc.</p>
+</div>
+<div class="article-actions">
+<p><a href="#">[ Read on one page ]</a></p>
+<p><a href="#">[ Next article ]</a></p>
+<p><a href="#">[ Comment ]</a></p>
+<p><a href="#">[ Share ]</a></p>
+<p><a href="#">[ Copy link ]</a></p>
+<p><a href="#">[ Print PDF ]</a></p>
+</div>
+<div class="section-separator"></div>
+<div class="editorial-info">
+<p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a class="contact-btn" href="kontakt.html">Skontaktuj się z nami</a>
+</div>
+</div>
+<div class="vertical-strip"></div>
+<aside class="sidebar kontener-szary desktop-sidebar">
+<div class="clock-calendar-row">
+<iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock">
+</iframe>
+<iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar">
+</iframe>
+</div>
+<iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>
+<div class="support-newsletter-section">
+<iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
+</iframe>
+</div>
+<div class="ads google sidebar-bottom-ad">
+<p>Reklama Google (na dole sidebara)</p>
+</div>
+</aside>
+</div>
+<div class="mobile-bottom-gadgets-container">
+<iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>
+<div class="support-newsletter-section">
+<iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
+</iframe>
+</div>
+<div class="ads google sidebar-bottom-ad">
+<p>Reklama Google (na dole sidebara)</p>
+</div>
+</div>
+<footer>
+</footer>
+<script>
     // Offcanvas menu script
     const toggle = document.getElementById('menu-toggle');
     const menu   = document.getElementById('offcanvas-menu');
@@ -163,6 +159,6 @@ Chcesz zostać na dłużej? Sprawdź noclegi w pobliżu Placu Przyjaciół Sopot
     if (overlay) {
       overlay.addEventListener('click', toggleMenu);
     }
-  </script>         
-    </body>     
+  </script>
+</body>
 </html>
