--- a/dobrze.html
+++ b/dobrze.html
@@ -1,139 +1,149 @@
-<!DOCTYPE html> 
-<html lang="pl"> 
-    <head> 
-        <meta charset="UTF-8"> 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <title>Danziger Chronograf – Tytuł Artykułu</title>         
-        <meta name="description" content="Opis artykułu na stronie sekcji."> 
-        <link rel="preconnect" href="https://fonts.googleapis.com"> 
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville&display=swap"> 
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&display=swap"> 
-        <link href="css/theme.css" rel="stylesheet" type="text/css"> 
-        <link href="css/section.css" rel="stylesheet" type="text/css"> 
-    </head>     
-    <body> 
-        <header> 
-            <button id="menu-toggle">☰</button>             
-            <button id="search-toggle"> 
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"> 
-                    <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/> 
-                </svg>                 
-            </button>             <a href="index.html" class="header-link"> <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">GDAŃSKI <img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf"> REPORTER</h1> </a> 
-        </header>         
-        <nav class="main-nav"> 
-            <ul> 
-                <li> <a href="stand.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">STANDPUNKT</a> 
-                </li>                 
-                <li> <a href="prawo.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">PRAWO</a> 
-                </li>                 
-                <li> <a href="lokalnie.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">LOKALNIE</a> 
-                </li>                 
-                <li> <a href="dobrze.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DOBRZE NA DZIŚ</a> 
-                </li>                 
-                <li> <a href="notpl.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">OBYWATELE NIE PL</a> 
-                </li>                 
-                <li> <a href="kartka.html" style="font-size: 12px;">KARTKA Z HISTORII</a> 
-                </li>                 
-                <li> <a href="de/chronograf.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DANZIGER CHRONOGRAF</a> 
-                </li>                 
-            </ul>             
-        </nav>         
-        <div id="menu-overlay"></div>         
-        <div id="offcanvas-menu"> 
-            <ul> 
-                <li> <a href="stand.html">STANDPUNKT</a> 
-                </li>                 
-                <li> <a href="prawo.html">PRAWO</a> 
-                </li>                 
-                <li> <a href="lokalnie.html">LOKALNIE</a> 
-                </li>                 
-                <li> <a href="dobrze.html">DOBRZE NA DZIŚ</a> 
-                </li>                 
-                <li> <a href="notpl.html">OBYWATELE NIE PL</a> 
-                </li>                 
-                <li> <a href="kartka.html">KARTKA Z HISTORII</a> 
-                </li>                 
-                <li> <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a> 
-                </li>                 
-            </ul>             
-        </div>         
-        <div class="mobile-top-gadgets-container"> 
-            <iframe src="swiss.html" title="Swiss Railway Clock" class="clock-iframe" scrolling="no"> 
-</iframe>             
-            <iframe src="cal.html" title="Vintage Calendar" class="calendar-iframe" scrolling="no"> 
-</iframe>             
-        </div>         
-        <div class="main-layout-wrapper"> 
-            <div class="main-content"> 
-                <div class="ads google article-top-ad"> 
-</div>                 
-                <h1 class="article-title" style="font-family: 'Merriweather', serif; font-size: 24px;">Kaszubska jednodniówka &ndash; smak, widok, powietrze.</h1> 
-                <p class="lead" style="font-size: 16px;">Są takie dni w środku sezonu, kiedy trzeba uciec z linii frontu turystycznego.</p> 
-                <p class="author-date">Autor: Jan Kowalski | Data publikacji: 26 lipca 2025</p> 
-                <img src="https://i.postimg.cc/Gm3z5TZk/kaszuby-szymbark-810535.jpg?text=Duży+Obraz+Artykułu" alt="Duży obraz artykułu" class="article-main-image"> 
-                <p class="image-caption">To jest podpis pod obrazem, krótki i opisowy.</p> 
-                <div class="article-body"> 
-                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Są takie dni w środku sezonu, kiedy trzeba uciec z linii frontu turystycznego. Zostawić Długi Targ, Molo i kolejki do zapiekanek &ndash; i pojechać w głąb. Proponujemy: jednodniowy wypad na Kaszuby. Bez wielkich walizek, bez bookingów, tylko z plecakiem, mapą i głodem. Start: Gdańsk Zachodni (przystanek Łostowice Świętokrzyska).    Autobus w kierunku Kościerzyny, najlepiej wsiąść ok. 7:30. Wysiąść w Szymbarku lub Gołubiu.</p> 
-                    <p>Wieża Widokowa na Wieżycy.
-   Wędrówka przez las zajmie niecałą godzinę. Na górze &ndash; stalowa konstrukcja z panoramą całych Kaszub. Przy dobrej pogodzie widać nawet wieżowce Gdańska.</p> 
-                    <p>&nbsp;Obiad: Zajazd &bdquo;Pod Wieżycą&rdquo;.
-   Tam nie pytają, czy zupa ma być mała czy duża. Czernina, kiszka ziemniaczana, karkówka w majeranku, do tego kompot z rabarbaru i chleb z domowego wypieku. Płacisz gotówką, ale nie żałujesz.</p> 
-                    <p>Popołudnie: Chmielno &ndash; ceramika i jezioro.  
-   Przejazd do Chmielna (PKS lub pieszo, jeśli siły pozwolą). W Muzeum Ceramiki Neclów można samodzielnie ulepić filiżankę lub garnek. Po zajęciach &ndash; spacer nad Jeziorem Białym.</p> 
-                    <p>&nbsp;Kolacja: karczma &bdquo;Skarbnik&rdquo; w Kościerzynie.  
-   Prawdziwe kołduny kaszubskie, śledź w śmietanie, pierogi z pokrzywą. Na koniec &ndash; nalewka z jeżyn podawana w kieliszku do jajka. Uwaga: nie prowadź po tym.</p> 
-                    <p>Powrót.   
-   Ostatni autobus do Gdańska o 20:10 (sprawdź rozkład). Droga powrotna przez pola i światła Trójmiasta &ndash; cisza po gwarze.
+<!DOCTYPE html>
+
+<html lang="pl" style="">
+<head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Danziger Chronograf – Tytuł Artykułu</title>
+<meta content="Opis artykułu na stronie sekcji." name="description"/>
+<link href="https://fonts.googleapis.com" rel="preconnect"/>
+<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&amp;display=swap" rel="stylesheet"/>
+<link href="css/theme.css" rel="stylesheet" type="text/css"/>
+<link href="css/section.css" rel="stylesheet" type="text/css"/>
+</head>
+<body>
+<header>
+<button id="menu-toggle">☰</button>
+<button id="search-toggle">
+<svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+<path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+</svg>
+</button> <a class="header-link" href="index.html"> <h1 style="">GDAŃSKI <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/> REPORTER</h1> </a>
+</header>
+<nav class="main-nav">
+<ul>
+<li> <a href="stand.html" style="">STANDPUNKT</a>
+</li>
+<li> <a href="prawo.html" style="">PRAWO</a>
+</li>
+<li> <a href="lokalnie.html" style="font-weight: wght@400; 700; ">LOKALNIE</a>
+</li>
+<li> <a href="dobrze.html" style="">DOBRZE NA DZIŚ</a>
+</li>
+<li> <a href="notpl.html" style="">OBYWATELE NIE PL</a>
+</li>
+<li> <a href="kartka.html" style="">KARTKA Z HISTORII</a>
+</li>
+<li> <a href="de/chronograf.html" style="">DANZIGER CHRONOGRAF</a>
+</li>
+</ul>
+</nav>
+<div id="menu-overlay"></div>
+<div id="offcanvas-menu">
+<ul>
+<li> <a href="stand.html">STANDPUNKT</a>
+</li>
+<li> <a href="prawo.html">PRAWO</a>
+</li>
+<li> <a href="lokalnie.html">LOKALNIE</a>
+</li>
+<li> <a href="dobrze.html">DOBRZE NA DZIŚ</a>
+</li>
+<li> <a href="notpl.html">OBYWATELE NIE PL</a>
+</li>
+<li> <a href="kartka.html">KARTKA Z HISTORII</a>
+</li>
+<li> <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
+</li>
+</ul>
+</div>
+<div class="mobile-top-gadgets-container">
+<iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock">
+</iframe>
+<iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar">
+</iframe>
+</div>
+<div class="main-layout-wrapper">
+<div class="main-content">
+<div class="ads google article-top-ad">
+</div>
+<h1 class="article-title" style="">Kaszubska jednodniówka – smak, widok, powietrze.</h1>
+<p class="lead" style="">Są takie dni w środku sezonu, kiedy trzeba uciec z linii frontu turystycznego.</p>
+<p class="author-date">Autor: Jan Kowalski | Data publikacji: 26 lipca 2025</p>
+<img alt="Duży obraz artykułu" class="article-main-image" src="https://i.postimg.cc/Gm3z5TZk/kaszuby-szymbark-810535.jpg?text=Duży+Obraz+Artykułu"/>
+<p class="image-caption">To jest podpis pod obrazem, krótki i opisowy.</p>
+<div class="article-body">
+<p style="">Są takie dni w środku sezonu, kiedy trzeba uciec z linii frontu turystycznego. Zostawić Długi Targ, Molo i kolejki do zapiekanek – i pojechać w głąb. Proponujemy: jednodniowy wypad na Kaszuby. Bez wielkich walizek, bez bookingów, tylko z plecakiem, mapą i głodem. Start: Gdańsk Zachodni (przystanek Łostowice Świętokrzyska).    Autobus w kierunku Kościerzyny, najlepiej wsiąść ok. 7:30. Wysiąść w Szymbarku lub Gołubiu.</p>
+<p>Wieża Widokowa na Wieżycy.
+   Wędrówka przez las zajmie niecałą godzinę. Na górze – stalowa konstrukcja z panoramą całych Kaszub. Przy dobrej pogodzie widać nawet wieżowce Gdańska.</p>
+<p> Obiad: Zajazd „Pod Wieżycą”.
+   Tam nie pytają, czy zupa ma być mała czy duża. Czernina, kiszka ziemniaczana, karkówka w majeranku, do tego kompot z rabarbaru i chleb z domowego wypieku. Płacisz gotówką, ale nie żałujesz.</p>
+<p>Popołudnie: Chmielno – ceramika i jezioro.  
+   Przejazd do Chmielna (PKS lub pieszo, jeśli siły pozwolą). W Muzeum Ceramiki Neclów można samodzielnie ulepić filiżankę lub garnek. Po zajęciach – spacer nad Jeziorem Białym.</p>
+<p> Kolacja: karczma „Skarbnik” w Kościerzynie.  
+   Prawdziwe kołduny kaszubskie, śledź w śmietanie, pierogi z pokrzywą. Na koniec – nalewka z jeżyn podawana w kieliszku do jajka. Uwaga: nie prowadź po tym.</p>
+<p>Powrót.   
+   Ostatni autobus do Gdańska o 20:10 (sprawdź rozkład). Droga powrotna przez pola i światła Trójmiasta – cisza po gwarze.
 Nie trzeba rezerwacji, nie trzeba aplikacji.  
-Wystarczy chcieć oddychać inaczej &ndash; i zjeść coś, co nie było zamrożone w styczniu.&nbsp; &nbsp;</p> 
-                </div>                 
-                <div class="article-actions"> 
-                    <p><a href="#">[ Read on one page ]</a></p> 
-                    <p><a href="#">[ Next article ]</a></p> 
-                    <p><a href="#">[ Comment ]</a></p> 
-                    <p><a href="#">[ Share ]</a></p> 
-                    <p><a href="#">[ Copy link ]</a></p> 
-                    <p><a href="#">[ Print PDF ]</a></p> 
-                </div>                 
-                <div class="section-separator"></div>                 
-                <div class="editorial-info"> 
-                    <p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a href="kontakt.html" class="contact-btn">Skontaktuj się z nami</a> 
-                </div>                 
-            </div>             
-            <div class="vertical-strip"></div>             
-            <aside class="sidebar kontener-szary desktop-sidebar"> 
-                <div class="clock-calendar-row"> 
-                    <iframe src="swiss.html" title="Swiss Railway Clock" class="clock-iframe" scrolling="no"> 
-</iframe>                     
-                    <iframe src="cal.html" title="Vintage Calendar" class="calendar-iframe" scrolling="no"> 
-</iframe>                     
-                </div>                 
-                <iframe src="wetter.html" width="100%" height="600" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"></iframe>                 
-                <div class="support-newsletter-section"> 
-                    <iframe src="support.html" width="100%" height="180" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"> 
-</iframe>                     
-                </div>                 
-                <div class="ads google sidebar-bottom-ad"> 
-                    <p>Reklama Google (na dole sidebara)</p> 
-                </div>                 
-            </aside>             
-        </div>         
-        <div class="mobile-bottom-gadgets-container"> 
-            <iframe src="wetter.html" width="100%" height="600" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"></iframe>             
-            <div class="support-newsletter-section"> 
-                <iframe src="support.html" width="100%" height="180" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"> 
-</iframe>                 
-            </div>             
-            <div class="ads google sidebar-bottom-ad"> 
-                <p>Reklama Google (na dole sidebara)</p> 
-            </div>             
-        </div>         
-        <footer> 
-</footer>         
-        <script>
+Wystarczy chcieć oddychać inaczej – i zjeść coś, co nie było zamrożone w styczniu.  </p>
+<p> INFORMACJE PRAKTYCZNE
+– Dojazd: z Gdańska Głównego pociągiem SKM lub REGIO do Kościerzyny (ok. 1h 40 min), koszt biletu ok. 15 zł  
+– Alternatywnie: autobus linii PKS przez Żukowo, Szymbark, Gołubie  
+– Wędrówka: na Wieżycę od przystanku to ok. 45 minut piechotą  
+– Obiad: zajazd „Pod Wieżycą” – ceny od 25 zł za danie, płatność gotówką  
+– Ceramika: Muzeum Ceramiki Neclów w Chmielnie – bilet normalny 15 zł, warsztaty od 30 zł  
+– Powrót: ostatni autobus lub pociąg do Gdańska między 20:00 a 21:15 – sprawdź rozkład jazdy
+Taka trasa to nie tylko odpoczynek – to inwestycja w oddech. Bez rezerwacji, bez planu, z poczuciem przestrzeni.
+Jeśli planujesz dłuższy wypad – sprawdź też noclegi w okolicach Wieżycy i Chmielna. Pensjonaty, kwatery agroturystyczne, domki z widokiem – dostępne od ok. 120 zł za noc.</p>
+</div>
+<div class="article-actions">
+<p><a href="#">[ Read on one page ]</a></p>
+<p><a href="#">[ Next article ]</a></p>
+<p><a href="#">[ Comment ]</a></p>
+<p><a href="#">[ Share ]</a></p>
+<p><a href="#">[ Copy link ]</a></p>
+<p><a href="#">[ Print PDF ]</a></p>
+</div>
+<div class="section-separator"></div>
+<div class="editorial-info">
+<p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a class="contact-btn" href="kontakt.html">Skontaktuj się z nami</a>
+</div>
+</div>
+<div class="vertical-strip"></div>
+<aside class="sidebar kontener-szary desktop-sidebar">
+<div class="clock-calendar-row">
+<iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock">
+</iframe>
+<iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar">
+</iframe>
+</div>
+<iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>
+<div class="support-newsletter-section">
+<iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
+</iframe>
+</div>
+<div class="ads google sidebar-bottom-ad">
+<p>Reklama Google (na dole sidebara)</p>
+</div>
+</aside>
+</div>
+<div class="mobile-bottom-gadgets-container">
+<iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>
+<div class="support-newsletter-section">
+<iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
+</iframe>
+</div>
+<div class="ads google sidebar-bottom-ad">
+<p>Reklama Google (na dole sidebara)</p>
+</div>
+</div>
+<footer>
+</footer>
+<script>
     // Offcanvas menu script
     const toggle = document.getElementById('menu-toggle');
     const menu   = document.getElementById('offcanvas-menu');
@@ -155,6 +165,6 @@ Wystarczy chcieć oddychać inaczej &ndash; i zjeść coś, co nie było zamroż
     }
 
     // Weather Widget Script - REMOVED AS IT'S NOW IN wetter.html
-  </script>         
-    </body>     
+  </script>
+</body>
 </html>
